--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <div id="logo">Tus Galletas de la Suerte</div>
+        <div id="logo">Tus Galletas de la Suerte MI AMOR</div>
         <button id="verGalletaBtn">Ver mi Galleta de Hoy</button>
-        <button id="verHistorialBtn">Ver Historial</button>
+        
     </header>
 
     <main>
@@ -26,7 +26,7 @@
 
     <footer>
         <p id="diasJuntos">Días juntos: 0</p>
-        <p>Con amor, para la persona más dulce</p>
+        <p>Con amor, para la persona más dulce que po eso es pastelito :) </p>
     </footer>
 
     <script src="main.js"></script>
